:encoding=UTF-8:maxLineLen=0:wrap=soft:folding=indent:noTabs=true:tabSize=4:
XML Plugin Change log

    Version 3.0.1 Requires jEdit 5.0, Java 1.6, XercesPlugin 2.9.1, ErrorList 1.9, SideKick 1.3, BeautyPlugin 0.7.0, CommonControls 1.5, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), Templates 4.1.2 (Optional), AntlrPlugin 4.4
        fix PB #1825 XML - schema error is silently ignored

    Version 3.0 Requires jEdit 5.0, Java 1.6, XercesPlugin 2.9.1, ErrorList 1.9, SideKick 1.3, BeautyPlugin 0.7.0, CommonControls 1.5, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), Templates 4.1.2 (Optional), AntlrPlugin 4.4
        Added new sidekick for json files. (Dale Anson)
        Plugin patch #147: Convert ascii entities (Character References) into chars in Entities to Characters action (Jarek Czekalski)
        CSS: better handling of @media queries
        CSS: bug #1784, css code completion is too slow
        XML: bug #1633 XML debugging output "quote is not closed"
        documentation updates, code refactoring

    Version 2.8.7 Requires jEdit 5.0, Java 1.6, XercesPlugin 2.9.1, ErrorList 1.9, SideKick 1.3, BeautyPlugin 0.7.0, CommonControls 1.5, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), and Templates 4.1.2 (Optional)
        Fix #3614106: XML plugin: Missing Hyperlinks to xref linkend= elements (Alan Ezust, Eric Le Lay)
        Fix pb #1763: XML Plugin unexpected asset type (Matthieu Casanova, Eric Le Lay)
        Fix pb #1775 XML javacc parser prints out lots of crap to stdout (Alan
        Ezust, Eric Le Lay)

    Version 2.8.5
        Fix #3533666: Attribute completion after self-closed tag (Alan Ezust, Eric Le Lay)
        Fix #3566344: XML: some errors go to stdout instead of errorlist when using
        xml:root and a reference from root to current buffer is missing (Eric Le Lay)
        Fix completion in tld and maven files. Add maven schema built-in (Eric Le Lay).